fix(home): menu collapse & 2 col innovation

--- a/app/styles/home.less
+++ b/app/styles/home.less
@@ -11,6 +11,12 @@
   background: url("../images/banner.jpg") no-repeat center center;
 }
 
+@media (max-width: @grid-float-breakpoint) {
+  .team-img, .innovation-block {
+    margin: 15px auto;
+    max-width: 500px;
+  }
+}
 
 // Catchphrase
 .catchphrase {
